* Add done state to statments

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)

Version 4.0.0 - 2016-05-03
* Fix company amount and reconciled for statements with diferent currency.

Version 3.4.0 - 2014-11-03

Version 3.2.0 - 2014-05-22

Version 3.0.0 - 2013-10-25
* Initial Release