@@ -1,3 +1,4 @@
+* Add count for action window domains
 * Add done state to statments
 
 Version 4.2.0 - 2016-11-28
